scm infrastructure test 2/2

--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 Atomic OS TODO List
 
-* SCM Infrastructure Test
-
+[ ]
+[*] SCM Infrastructure Test
+    [*] Github / SourceForge sync
+    [*] atomos-devel mailing list notifications
+    [*] identi.ca notifications
