updated README summary, support links, 3rd party refs

--- a/README
+++ b/README
@@ -3,13 +3,23 @@ Atomic OS README
 (C)2005-2011 Scott Elcomb
 Some Rights Reserved
 
+
 0. Legal
 
 Atomic OS is licensed under the LGPLv3 license.  For details, please see the LICENSE file.
 
 1. Summary
 
-Atomic OS is a responsive Web 2.0 operating environment & development platform. Based on AJAX techniques, it emulates/provides standard operating system features including a command-line shell, interpreter, filesystem, database access and GUI services.
+Atomic OS is a "live" OS-like environment and SPA library/template for web app development.
+
+At it's core, Atomic OS aims to provide to web developers features that desktop dev's take for granted: basic operating system features like a command interpreter and filesystem.
+
+Included in Atomic OS is a simple scriptable command shell and basic desktop environment, giving developers absolute runtime access to their RIA & SPA applications.
+
+Atomic OS hopes to help ameliorate dependence on the cloud by allowing app data to be stored within the microsystem itself, using a storage strategy established by TiddlyWiki.
+
+Because Atomic OS is simply an html file, it is instantly a template, infinitely reusable and extremely easy to distribute.
+
 
 2. Project Layout
 
@@ -23,19 +33,18 @@ Atomic OS is a responsive Web 2.0 operating environment & development platform. 
               |
               +-- client --,-- atomic
               |            +-- perl-curses
-              |            `-- node-curses
-              |
+              |            +-- node-curses
+              |            `-- t                 (qunit)
               `--
 
 3. Requirements
-
-Building Atomic Client Documents requires perl, python, and bash
-
-Running the Atomic OS Daemon requires node.js
+  - Building Atomic Client Documents: perl, python, and bash
+  - Running the Atomic OS Daemon:     node.js
 
 4. Support
-
-Please contact psema4@gmail.com
+  - Issue Tracker: https://github.com/psema4/Atomic-OS/issues
+  - Mailing List:  https://lists.sourceforge.net/lists/listinfo/atomos-discuss
 
 A. 3rd Party Tools & Libraries
-  - jsmin.py (JSON License - http://www.json.org/license.html)
+  - minifier: jsmin.py (JSON License - http://www.json.org/license.html)
+  - testing:  QUnit (dual MIT/GPL License)
